<resources>
    <string name="app_name">Sourdough Starter Simulation</string>
    <string name="location_counter">Counter</string>
    <string name="location_fridge">Fridge</string>
    <string name="location_pantry">Pantry</string>
    <string name="pick_location">Choose location</string>
    <string-array name="location_array">
        <item>Counter</item>
        <item>Pantry</item>
        <item>Fridge</item>
    </string-array>
    <string name="feed_dialog_title">Feed Jar</string>
    <string name="feed_dialog_page1">(1of2)</string>
    <string name="feed_dialog_page2">(2of2)</string>
    <string name="pick_flour">Choose flour</string>
    <string-array name="flour_array">
        <item>Flour 1</item>
        <item>Flour 2</item>
        <item>Flour 3</item>
        <item>Flour 4</item>
    </string-array>
    <string name="pick_water">Choose water</string>
    <string-array name="water_array">
        <item>Water 1</item>
        <item>Water 2</item>
        <item>Water 3</item>
        <item>Water 4</item>
    </string-array>
    <string name="water1">Water 1</string>
    <string name="water2">Water 2</string>
    <string name="water3">Water 3</string>
    <string name="water4">Water 4</string>
    <string name="lid_button_add_lid">LID</string>
    <string name="feed_confirm">Feed</string>
    <string name="feed_cancel">Cancel</string>
    <string name="lid_button_remove_lid">DELID</string>
    <string name="feed_button">FEED</string>
    <string name="location_temp_fridge">40</string>
    <string name="location_temp_pantry">70</string>

    <string name="jar_contents_title">Starter Analysis Report</string>
    <string name="jar_chemical_subtitle">Basic Chemical Analysis</string>
    <string name="jar_chemical_pH">pH: </string>
    <string name="jar_chemical_TDS">Conductivity (µS/cm): </string>
    <string name="jar_microbe_subtitle">Microbial Load</string>
    <string name="jar_yeast_subtitle">Yeasts</string>
    <string name="jar_lab_subtitle">Lactic Acid Bacteria</string>
    <string name="jar_bad_subtitle">Other</string>
    <string-array name="yeast_array">
        <item>Yeast 1</item>
        <item>Yeast 2</item>
        <item>Yeast 3</item>
        <item>Yeast 4</item>
    </string-array>
    <string-array name="lab_array">
        <item>LAB 1</item>
        <item>LAB 2</item>
        <item>LAB 3</item>
        <item>LAB 4</item>
    </string-array>
    <string-array name="bad_array">
        <item>Bad 1</item>
        <item>Bad 2</item>
        <item>Bad 3</item>
        <item>Bad 4</item>
    </string-array>
    <string name="jar_contents_close">Close</string>

    <string name="jar_is_empty">Nothing to view</string>
</resources>
