<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feed_dialog"
    android:theme="@style/AppTheme.Dialog"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/feed_dialog_title"
        android:id="@+id/feedDialogTitle"
        android:padding="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pick_flour"
        android:id="@+id/flourSubtitle"
        android:padding="4dp"
        android:paddingBottom="2dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/flour_spinner"
        android:padding="4dp"
        android:paddingBottom="6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pick_water"
        android:id="@+id/waterSubtitle"
        android:padding="4dp"
        android:paddingBottom="2dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/water_spinner"
        android:padding="4dp"
        android:paddingBottom="6dp" />

</LinearLayout>