<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.houseonacliff.sourdoughstartersimulation.MainActivity"
    android:background="@drawable/background_counter">

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_cardview"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:layout_alignParentEnd="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/location_cardview"
            android:layout_alignEnd="@+id/location_cardview"
            android:padding="5dp"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textAlignment="textStart"
                android:text="@string/location_counter"
                android:textColor="@android:color/holo_red_dark"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:autoText="false"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/location_temp_pantry"
                android:id="@+id/textView2"
                android:textAlignment="textEnd"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@+id/textView" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false">

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view2"
            android:layout_weight=".5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lid_button_add_lid"
            android:id="@+id/lid_button" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/view"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_button"
            android:id="@+id/feed_button" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/view3"
            android:layout_weight=".5" />
    </LinearLayout>


</RelativeLayout>
