<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.houseonacliff.sourdoughstartersimulation.MainActivity"
    android:id="@+id/base">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/location_background"
        android:adjustViewBounds="true"
        android:src="@drawable/background_pantry"
        android:scaleType="fitXY"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_centerInParent="true" />

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_cardview"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:contextClickable="false"
        android:onClick="changeLocation">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/location_cardview"
            android:layout_alignEnd="@+id/location_cardview"
            android:padding="5dp"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:weightSum="1"
            android:elevation="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location_text"
                android:textAlignment="textStart"
                android:text="@string/location_pantry"
                android:textColor="@android:color/holo_red_dark"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:autoText="false"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/location_temp_pantry"
                android:id="@+id/temp_text"
                android:textAlignment="textEnd"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@+id/location_text" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/linearLayout">

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view2"
            android:layout_weight=".5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"
            android:text="@string/lid_button_add_lid"
            android:id="@+id/lid_button"
            android:onClick="changeLidState"
            android:enabled="true"
            />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/view"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"
            android:text="@string/feed_button"
            android:id="@+id/feed_button"
            android:onClick="feedJar"
            android:enabled="true" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/view3"
            android:layout_weight=".5" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jar_imageview"
        android:src="@drawable/jar_empty_nolid"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/location_background"
        android:layout_marginTop="132.5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lid_imageview"
        android:src="@drawable/jar_lid"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/jar_imageview"
        android:alpha="0"
        android:translationY="-100dp"/>


</RelativeLayout>
